# dutch-parking-detection

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  test.ipynb
backend/: capacity_estimator.py  config.py  crop_utils.py  geo_utils.py  image_utils.py  main.py  mask_generator.py  obb_merger.py  pipeline.py  source_loader.py  vehicle_counter.py  vlm_verifier.py  yolo_detector.py
deployment/: nginx.conf
experiments/: clear_sc.sh  extract_template.py  find_icon_coords.py  grounding_dino.py  lightOnOcr.py  opencv_detection.py  owl_vit.py  pdf_image.py  prediction_script.py  pyproject.toml  requirements.txt  test_yolo_world.py  yolo_world.ipynb  yolo_world.py
experiments/finetune_pipeline-main/: dataset_generation.py  readme.md  requirements.txt  training.py
new_frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
new_frontend/components/: AreaSelectorMap.tsx  Dashboard.tsx  Header.tsx  JobHeader.tsx  JobView.tsx  MapSection.tsx  ProcessingStatus.tsx  SearchableSelect.tsx  SidebarInfo.tsx  SpaceComparisonSlider.tsx  SpacesTable.tsx  StatsCards.tsx  TileComparisonSlider.tsx  prompts.ts
new_frontend/data/: dutch_municipalities.json
new_frontend/hooks/: useParkingAnalysis.ts
new_frontend/src/api/: config.ts  parkingApi.ts
new_frontend/src/context/: ApiContext.tsx
new_frontend/utils/: exportUtils.ts  fileUtils.ts  geoUtils.ts  imageUtils.ts  pathUtils.ts  streamUtils.ts
references/: PROJECT_SNAPSHOT.json
scripts/: AUTHENTICATION_ISSUE_SOLUTIONS.md  LABELSTUDIO_IMPORT_SUMMARY.md  QUICKSTART.md  URL_FIX_GUIDE.md  convert_to_labelstudio.py  cropped_obb.py  data-generation.md  data-generation.py  data.yaml  fix_labelstudio_urls.py  fix_to_relative_urls.py  import_with_sdk.py  labelstudio-config.xml  labelstudio-import-fixed.json  labelstudio-import.json  lable-studio.yml  resume_training.py  simple_import.py  viz_dataset.py  yolo26_train.py
yolo26s-obb-heavy-aug6/: args.yaml  results.csv
