[project]
name = "dutch-parking-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "comet-ml>=3.55.0",
    "fastapi>=0.128.0",
    "google-genai>=1.59.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "poethepoet>=0.40.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sam3>=0.0.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "torch>=2.9.1",
    "transformers",
    "ultralytics>=8.4.5",
    "uvicorn>=0.40.0",
]

[tool.poe.tasks]
backend = { shell = "uvicorn main:app --reload --port 8000", cwd = "./backend" }
frontend = { shell = "npm run dev", cwd = "./frontend" }
new_frontend = { shell = "npm run dev", cwd = "./new_frontend" }
dev = { parallel = ["backend", "frontend"] }
new_dev = { parallel = ["backend", "new_frontend"] }
pred = { shell = "python prediction_script.py", cwd = "/home/mindmap/Desktop/dutch-parking-detection/experiments"}

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
