[project]
name = "dutch-parking-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "comet-ml>=3.55.0",
    "einops>=0.8.2",
    "fastapi>=0.128.0",
    "google-genai>=1.59.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=9.0.0",
    "poethepoet>=0.40.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sam3>=0.0.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "torch>=2.1.0",
    "tqdm>=4.65.0",
    "transformers==4.48.2",
    "ultralytics>=8.4.5",
    "unsloth>=2025.9.5",
    "uvicorn>=0.40.0",
]

[tool.poe.tasks]
backend = { shell = "uvicorn main:app --reload --port 8000", cwd = "./backend" }
frontend = { shell = "npm run dev", cwd = "./frontend" }
new_frontend = { shell = "npm run dev", cwd = "./new_frontend" }
dev = { parallel = ["backend", "frontend"] }
new_dev = { parallel = ["backend", "new_frontend"] }
pred = { shell = "python prediction_script.py", cwd = "/home/mindmap/Desktop/dutch-parking-detection/experiments"}

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }


